syntax = "proto2";

package janitor;

message PackageOverrides {
   optional string name = 1;

   optional string upstream_branch_url = 2;

   optional string branch_url = 3;
};

message OverrideConfig {
    repeated PackageOverrides package = 1;
};
